# 23-08Blue

./: .gitignore  Cargo.toml  README.md  droqen-helper.txt
-mainbranch-/main-modjam-kuba/: Cargo.toml  ambient.toml
01_messembers/cam/: Cargo.toml  ambient.toml
01_messembers/cam/src/: AnyHeadLookat.rs  AnyHeadTargetEnt.rs  ClientMessageNewCam.rs  ClientQueryCamTilt.rs  ClientQueryMouseSetsTilt.rs  client.rs  server.rs
01_messembers/desert_minigame/: Cargo.toml  ambient.toml
01_messembers/desert_minigame/src/: client.rs
01_messembers/shouter/: Cargo.toml  ambient.toml
01_messembers/shouter/src/: ServerMessageNewShout.rs  ServerShoutParticleAnim.rs  server.rs
01_messembers/uphill/: Cargo.toml  ambient.toml
01_messembers/uphill/src/: client.rs  rock.rs  server.rs
02_packgames/destined/: Cargo.toml  ambient.toml
02_packgames/destined/src/: destiny.rs
02_packgames/maze_field/: Cargo.toml  ambient.toml
02_packgames/maze_field/src/: server.rs
02_packgames/slowmover_ptt/: Cargo.toml  ambient.toml
02_packgames/slowmover_ptt/src/: client.rs  mover_prediction.rs  server.rs
03_packthis/click_with_ease_demo/: Cargo.toml  ambient.toml
03_packthis/click_with_ease_demo/src/: client.rs
03_packthis/click_with_easymover_demo/: Cargo.toml  ambient.toml
03_packthis/click_with_easymover_demo/src/: client.rs  server.rs
03_packthis/click_with_obstacles_demo/: Cargo.toml  ambient.toml
03_packthis/click_with_obstacles_demo/src/: client.rs  server.rs
03_packthis/clicks_auto/: Cargo.toml  ambient.toml
03_packthis/clicks_auto/src/: client.rs
03_packthis/ease/: Cargo.toml  ambient.toml
03_packthis/ease/src/: client.rs  easing_system.rs  examples.rs  server.rs
03_packthis/easymover/: Cargo.toml  ambient.toml
03_packthis/easymover/src/: both.rs  client.rs  server.rs  usage.rs
03_packthis/easymover_blockable/: Cargo.toml  ambient.toml
03_packthis/easymover_blockable/src/: client.rs  server.rs  usage.rs
03_packthis/instant_camera/: Cargo.toml  ambient.toml
03_packthis/instant_camera/src/: client.rs
03_packthis/mover_mod_fruit/: Cargo.toml  ambient.toml
03_packthis/mover_mod_fruit/src/: server.rs
BoatGameBlue/: Cargo.toml  ambient.toml
BoatGameBlue/embers/boatblue_boat/: Cargo.toml  ambient.toml
BoatGameBlue/embers/boatblue_boat/src/: client.rs  server.rs
BoatGameBlue/embers/boatblue_boat_demo/: Cargo.toml  ambient.toml
BoatGameBlue/embers/boatblue_boat_demo/assets/: MSH_Boat.glb
BoatGameBlue/embers/boatblue_boat_demo/src/: client.rs  server.rs
BoatGameBlue/embers/boatblue_citygen_simple/: Cargo.toml  ambient.toml
BoatGameBlue/embers/boatblue_citygen_simple/assets/: MSH_Building_5x5x10_001.glb  MSH_Building_5x5x10_002.glb  MSH_Building_5x5x5_001.glb  MSH_Building_5x5x5_002.glb  MSH_Building_Seperator.glb  building_mousehole.glb  pipeline.toml
BoatGameBlue/embers/boatblue_citygen_simple/src/: s_mkworld.rs  server.rs
BoatGameBlue/embers/boatblue_matter/: Cargo.toml  ambient.toml
BoatGameBlue/embers/boatblue_matter_demo/: Cargo.toml  ambient.toml
BoatGameBlue/embers/boatblue_playerboat/: Cargo.toml  ambient.toml
BoatGameBlue/embers/boatblue_playerboat_debug/: Cargo.toml  ambient.toml
BoatGameBlue/embers/boatblue_playgrid/: Cargo.toml  ambient.toml
BoatGameBlue/embers/boatblue_scatteredtrash/: Cargo.toml  ambient.toml
BoatGameBlue/embers/boatblue_selfie_camera/: Cargo.toml  ambient.toml
BoatGameBlue/embers/boatblue_selfie_camera_demo/: Cargo.toml  ambient.toml
BoatGameBlue/embers/boatblue_selfie_camera_mouse_tilt/: Cargo.toml  ambient.toml
BoatGameBlue/embers/boatblue_water/: Cargo.toml  ambient.toml
BoatGameBlue/embers/flume_test/: Cargo.toml  ambient.toml
BoatGameBlue/src/: server.rs
Insectarium_Collider/: Cargo.toml  ambient.toml
Insectarium_Collider/assets/: pipeline.toml
Insectarium_Spawn_Query/: Cargo.toml  ambient.toml
Insectarium_Spawn_Query/embers/Entity_Listener/: Cargo.toml  ambient.toml
Insectarium_Spawn_Query/embers/Entity_Spawner/: Cargo.toml  ambient.toml
a_nice_overhead_camera/: Cargo.toml  ambient.toml
a_nice_overhead_camera/demo/: Cargo.toml  ambient.toml
a_nice_overhead_camera/demo/src/: server.rs
a_nice_overhead_camera/src/: c_nice_cam.rs  client.rs  x_head.rs
all_players_boats/: Cargo.toml  ambient.toml
all_players_boats/demo/: Cargo.toml  ambient.toml
all_players_boats/src/: c_mouseinput.rs  client.rs  s_playerconnected.rs  server.rs
dans_modeling_agency/: Cargo.toml  ambient.toml
dans_modeling_agency/assets/: MSH_Building_001.glb  MSH_Building_002.glb  MSH_Building_003.glb  MSH_Building_004.glb  MSH_Building_005.glb  MSH_Building_006.glb  MSH_Building_007.glb  MSH_Building_008.glb  MSH_Building_009.glb  MSH_Building_010.glb  MSH_Building_011.glb  MSH_Building_012.glb  MSH_Building_013.glb  MSH_Building_014.glb  MSH_Building_015.glb  MSH_Building_Hole_001.glb  MSH_Building_Hole_002.glb  MSH_Building_Hole_003.glb  MSH_Building_Hole_004.glb  MSH_Building_Hole_005.glb  why a snickers bar tho.glb
dans_modeling_agency/src/: c_adjust_nice_camera.rs  client.rs  s_adjust_nice_camera.rs  s_spawn_boat.rs  s_spawn_cube_city.rs  s_spawn_quad.rs  s_spawn_snickers_bar.rs  server.rs
demo_cutefruit/: Cargo.toml  ambient.toml
demo_cutefruit/assets/: MSH_Prop_Crate.glb
demo_cutefruit/src/: c_camera_follows_mouse.rs  c_mice_boatmodels.rs  c_score_ui.rs  client.rs  s_mice_boatparams.rs  s_mice_collect_dots.rs  s_spawn_dots.rs  s_worldgen.rs  server.rs
demo_mousemaze/: Cargo.toml  ambient.toml
demo_mousemaze/src/: c_adjust_nice_camera.rs  s_micefloat.rs  s_spawn_maze.rs  s_spawn_mice.rs  server.rs
head/: Cargo.toml  ambient.toml
head/src/: client.rs  server.rs  x_head.rs
main-modjam-kuba/: Cargo.toml  ambient.toml
main-modjam-kuba/src/: s_balls.rs  server.rs
nice_overhead_camera/: Cargo.toml  ambient.toml
nice_overhead_camera/src/: c_nice_cam.rs  x_head.rs
ww_gen/: Cargo.toml  ambient.toml
ww_gen/assets/: MSH_Building_Wall_Lrg_Door_001.glb
ww_gen/demo/: Cargo.toml  ambient.toml
ww_gen/demo/src/: server.rs
ww_gen/src/: s_block_collider.rs  server.rs
(+146 files in other folders)
