[workspace]
members = [
  "01_messembers/babel",
  "01_messembers/cam",
  "01_messembers/demo",
  "01_messembers/desert_minigame",
  "01_messembers/earth_minigame",
  "01_messembers/uphill_minigame",
  "01_messembers/skater",
  "01_messembers/shouter",
  "02_packgames/defender_ptt",
  "02_packgames/destined",
  "02_packgames/maze_field",
  "02_packgames/slowmover_ptt",
  "03_packthis/easymaze",
  "03_packthis/easymover",
  "03_packthis/easymover_blockable",
  "03_packthis/test",
  "03_packthis/mover_this",
  "03_packthis/mover_mod_fruit",
  "03_packthis/deploy_test",
  "03_packthis/ease",
  "03_packthis/relationships",
  "03_packthis/clicks_auto",
  "03_packthis/click_with_ease_demo",
  "03_packthis/click_with_easymover_demo",
  "03_packthis/click_with_obstacles_demo",
  "03_packthis/instant_camera",
  "a_nice_overhead_camera",
  "a_nice_overhead_camera/demo",
  "blue-moon",
  "buoy",
  "ww_gen",
  "ww_gen/demo",
  "all_blocks_decorated_as_shacks",
  "all_players_boats",
  "all_players_boats/demo",
  "skatemouse",
  "skatemouse/demo",
  "demo_mousemaze",
  "demo_cutefruit",
  "dans_modeling_agency",
  "defenders_jamgame",
  "BoatGameBlue",
  "BoatGameBlue/embers/boatblue_boat_demo",
  "BoatGameBlue/embers/boatblue_citygen_simple",
  "BoatGameBlue/embers/boatblue_matter",
  "BoatGameBlue/embers/boatblue_matter_demo",
  "BoatGameBlue/embers/boatblue_playerboat",
  "BoatGameBlue/embers/boatblue_playerboat_debug",
  "BoatGameBlue/embers/boatblue_playgrid",
  "BoatGameBlue/embers/boatblue_scatteredtrash",
  "BoatGameBlue/embers/boatblue_selfie_camera",
  "BoatGameBlue/embers/boatblue_selfie_camera_demo",
  "BoatGameBlue/embers/boatblue_selfie_camera_mouse_tilt",
  "BoatGameBlue/embers/boatblue_water",
  "BoatGameBlue/embers/boatblue_boat",
  "BoatGameBlue/embers/broadcast-only/pin_mouseuv",
  "BoatGameBlue/embers/flume_test",
  "BoatGameBlue/embers/subscribe-only/uv_debugger",
]

[workspace.dependencies]
ambient_api = {git = "https://github.com/AmbientRun/Ambient.git", branch = "main"}
