[package]
name = "insectarium_collider"

edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
ambient_api = { git = "https://github.com/AmbientRun/Ambient.git", rev = "69577e9acf" }

[[bin]]
name = "client_insectarium_collider"
path = "src/client.rs"
required-features = ["client"]

[[bin]]
name = "server_insectarium_collider"
path = "src/server.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]