[package]
name = "insectarium_spawn_query"

edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
ambient_api = { workspace = true }

[[bin]]
name = "client_insectarium_spawn_query"
path = "src/client.rs"
required-features = ["client"]

[[bin]]
name = "server_insectarium_spawn_query"
path = "src/server.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]
