[package]
name = "dans_modeling_agency"

edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
ambient_api = { git = "https://github.com/AmbientRun/Ambient.git", rev = "6620f51a00" }

[[bin]]
name = "client_dans_modeling_agency"
path = "src/client.rs"
required-features = ["client"]

[[bin]]
name = "server_dans_modeling_agency"
path = "src/server.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]