[package]
name = "dans_modeling_agency"

edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
ambient_api = { workspace = true }

[[bin]]
name = "client_dans_modeling_agency"
path = "src/client.rs"
required-features = ["client"]

[[bin]]
name = "server_dans_modeling_agency"
path = "src/server.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]