[package]
name = "demo_mousemaze"

edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
ambient_api = { git = "https://github.com/AmbientRun/Ambient.git", rev = "291939de63" }
pathfinding = "4.3.1"

[[bin]]
name = "client_demo_mousemaze"
path = "src/client.rs"
required-features = ["client"]

[[bin]]
name = "server_demo_mousemaze"
path = "src/server.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]
