[package]
name = "head"

edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
ambient_api = { git = "https://github.com/AmbientRun/Ambient.git", rev = "05a7ae1685" }

[[bin]]
name = "client_head"
path = "src/client.rs"
required-features = ["client"]

[[bin]]
name = "server_head"
path = "src/server.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]