[package]
name = "main_modjam_kuba"

edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
ambient_api = { workspace = true }

[[bin]]
name = "client_main_modjam_kuba"
path = "src/client.rs"
required-features = ["client"]

[[bin]]
name = "server_main_modjam_kuba"
path = "src/server.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]
