[package]
name = "cam"

edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
ambient_api = { git = "https://github.com/AmbientRun/Ambient.git", rev = "c8d1204cb2" }

[[bin]]
name = "client_cam"
path = "src/client.rs"
required-features = ["client"]

[[bin]]
name = "server_cam"
path = "src/server.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]