[package]
name = "slowmover_ptt"

edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
ambient_api = { git = "https://github.com/AmbientRun/Ambient.git", rev = "581af6e556" }

[[bin]]
name = "client_slowmover_ptt"
path = "src/client.rs"
required-features = ["client"]

[[bin]]
name = "server_slowmover_ptt"
path = "src/server.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]