[package]
name = "click_with_ease_demo"

edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
ambient_api = { git = "https://github.com/AmbientRun/Ambient.git", rev = "17c3be7ec3bd8bc70b7c176b75b7c1772f04438e" }

[[bin]]
name = "client_click_with_ease_demo"
path = "src/client.rs"
required-features = ["client"]

[[bin]]
name = "server_click_with_ease_demo"
path = "src/server.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]