[package]
name = "click_with_obstacles_demo"

edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
ambient_api = { git = "https://github.com/AmbientRun/Ambient.git", rev = "903ce97096d3368673d0225685dc39e4b18f741f" }

[[bin]]
name = "client_click_with_obstacles_demo"
path = "src/client.rs"
required-features = ["client"]

[[bin]]
name = "server_click_with_obstacles_demo"
path = "src/server.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]