[package]
name = "clicks_auto"

edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
ambient_api = {git = "https://github.com/AmbientRun/Ambient.git", rev = "17c3be7ec3bd8bc70b7c176b75b7c1772f04438e"}

[[bin]]
name = "client_clicks_auto"
path = "src/client.rs"
required-features = ["client"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]
