[package]
name = "ease"

edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
ambient_api = {git = "https://github.com/AmbientRun/Ambient.git", rev = "bbfae69a93"}

[[bin]]
name = "client_ease"
path = "src/client.rs"
required-features = ["client"]

[[bin]]
name = "server_ease"
path = "src/server.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]
