[package]
name = "easymover_blockable"

edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
ambient_api = {git = "https://github.com/AmbientRun/Ambient.git", rev = "06ac0e6e9cac07ac362e77444a13b145f4341f66"}

[[bin]]
name = "server_easymover_blockable"
path = "src/server.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]
