[package]
name = "instant_camera"

edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
ambient_api = {git = "https://github.com/AmbientRun/Ambient.git", rev = "06ac0e6e9cac07ac362e77444a13b145f4341f66"}

[[bin]]
name = "client_instant_camera"
path = "src/client.rs"
required-features = ["client"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]
