[package]
name = "mover_mod_fruit"

edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
ambient_api = { git = "https://github.com/AmbientRun/Ambient.git", rev = "9bcfdba070f778e28144ab5afcf10d2fed45a538" }

[[bin]]
name = "client_mover_mod_fruit"
path = "src/client.rs"
required-features = ["client"]

[[bin]]
name = "server_mover_mod_fruit"
path = "src/server.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]